Rename the (platformsh-varbase) repo - Fork a new repo from D9 with the name (platformsh-varbase) - Update the code of the new fork - Update vardot/platformsh-varbase to platformsh-templates/drupal9

--- a/.lando.yml
+++ b/.lando.yml
@@ -1,32 +1,9 @@
-# This file sets some good defaults for local development using this Platform.sh
-# template with Lando.
-#
-# Note that you should not edit this file so it can continue to receive upstream
-# updates. If you wish to change the values below then override them in your
-# normal .lando.yml.
-
-# These both allow you to test this template without needing a site on Platform.sh
-# However you will want to replace them in your .lando.yml
-name: platformsh-varbase
+name: varbase
 recipe: platformsh
-
 config:
   webroot: docroot
   php: '7.3'
   drush: ^10
-  # This section overrides Platform.sh configuration with values that make more
-  # sense for local development.
-  #
-  # Note that "app" is the name of the application defined in your
-  # .platform.app.yaml or applications.yaml.
-  overrides:
-    app:
-      variables:
-        d8config:
-          "system.file:path:temporary": "/tmp"
-        d8settings:
-          "skip_permissions_hardening": 1
-
 services:
   appserver:
     scanner: false
@@ -44,11 +21,7 @@ services:
 #    type: solr:8.4
 #    config:
 #      dir: docroot/modules/contrib/search_api_solr/solr-conf/7.x
-
-# These are tools that are commonly used during development for this template.
 tooling:
-  drush:
-    service: app
   phpcs:
     service: appserver
     cmd: "phpcs"
