Allow vardot/platformsh-varbase template to work with Composer ~2.0 and update the composer.lock to Varbase 9.0.0-rc1 #1

--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,11 @@
     }
   },
   "require": {
-    "composer/installers": "~1.0",
-    "oomphinc/composer-installers-extender": "~1.0",
+    "composer/installers": "~1.0 || ~2.0",
+    "oomphinc/composer-installers-extender": "~1.0 || ~2.0",
     "cweagans/composer-patches": "~1.0",
     "drupal/core-composer-scaffold": "^9",
     "drupal/core-project-message": "^9",
-    "drupal/drupal-library-installer-plugin": "^0.3",
     "webflo/drupal-finder": "~1.0",
     "webmozart/path-util": "~2.0",
     "vardot/varbase": "~9.0",
@@ -47,9 +46,6 @@
     "phing/phing": "~2.0",
     "drupal/drupal-extension": "~4.0",
     "emuse/behat-html-formatter": "^0.2.0"
-  },
-  "replace": {
-    "ajaxorg/ace-builds": "*"
   },
   "config": {
     "bin-dir": "bin/",
