--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -9,3 +9,14 @@ db:
 
 cache:
     type: redis:6.0
+
+#searchsolr:
+#    type: solr:8.0
+#    disk: 1024
+#    configuration:
+#        cores:
+#            maincore:
+#                conf_dir: !archive "solr_8.x_config/"
+#        endpoints:
+#            solr:
+#                core: maincore
