--- a/.lando.upstream.yml
+++ b/.lando.upstream.yml
@@ -12,7 +12,7 @@ recipe: platformsh
 
 config:
   webroot: docroot
-  php: '7.3'
+  php: '7.4'
   drush: ^10
   # This section overrides Platform.sh configuration with values that make more
   # sense for local development.
@@ -34,6 +34,9 @@ services:
       - "composer global require drupal/coder dealerdirect/phpcodesniffer-composer-installer mglaman/drupal-check phpunit/phpunit"
       - 'export PATH="/var/www/.composer/vendor/bin"'
       - "wget https://asm89.github.io/d/twig-lint.phar -P /var/www"
+    xdebug: true
+    config:
+      php: .lando/.php.ini
   node:
     type: node
     build:
