--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -7,7 +7,11 @@
 name: 'app'
 
 # The runtime the application uses.
-type: 'php:7.3'
+type: 'php:7.4'
+
+dependencies:
+    php:
+        composer/composer: '^2'
 
 runtime:
     # Enable the redis extension so Drupal can communicate with the Redis cache.
@@ -107,7 +111,7 @@ web:
             # Rules for specific URI patterns.
             rules:
                 # Allow access to common static files.
-                '\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
+                '(?i)\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
                     allow: true
                 '^/robots\.txt$':
                     allow: true
