--- a/composer.json
+++ b/composer.json
@@ -38,13 +38,12 @@
     "webmozart/path-util": "~2.0",
     "vardot/varbase": "~9.0",
     "vardot/varbase-updater": "~2.0",
-    "drupal/redis": "^1.4",
-    "drush/drush": "~10.0",
-    "platformsh/config-reader": "^2.3"
+    "drupal/redis": "^1.5",
+    "drush/drush": "^10.5",
+    "platformsh/config-reader": "^2.4"
   },
   "require-dev": {
     "drupal/core-dev": "~9.0",
-    "phing/phing": "~2.0",
     "drupal/drupal-extension": "~4.0",
     "emuse/behat-html-formatter": "^0.2.0"
   },
