--- a/composer.json
+++ b/composer.json
@@ -35,17 +35,14 @@
     "drupal/core-composer-scaffold": "^9",
     "drupal/core-project-message": "^9",
     "webflo/drupal-finder": "~1.0",
-    "webmozart/path-util": "~2.0",
     "vardot/varbase": "~9.0.0",
     "vardot/varbase-updater": "~2.0",
     "drupal/redis": "^1.5",
-    "drush/drush": "^10",
+    "drush/drush": "^11.0",
     "platformsh/config-reader": "^2.4"
   },
   "require-dev": {
-    "drupal/core-dev": "~9.0",
-    "drupal/drupal-extension": "~4.0",
-    "emuse/behat-html-formatter": "^0.2.0"
+    "drupal/core-dev": "~9.0"
   },
   "config": {
     "bin-dir": "bin/",
