--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -14,9 +14,10 @@ dependencies:
         composer/composer: '^2'
 
 runtime:
-    # Enable the redis extension so Drupal can communicate with the Redis cache.
     extensions:
         - redis
+        - imagick
+        - apcu
         - sodium
 
 # The relationships of the application with services or other applications.
