--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -4,7 +4,7 @@
 # See https://docs.platform.sh/configuration/app.html
 
 # The name of this app. Must be unique within a project.
-name: 'drupal'
+name: 'app'
 
 # The runtime the application uses.
 type: 'php:8.0'
@@ -19,7 +19,6 @@ runtime:
         - imagick
         - apcu
         - sodium
-        - blackfire
 
 # The relationships of the application with services or other applications.
 #
@@ -66,6 +65,7 @@ mounts:
 
 # Configuration of the build of this application.
 build:
+    # Automatically run `composer install` on every build.
     flavor: composer
 
 # The hooks executed at various points in the lifecycle of the application.
