--- a/.lando.yml
+++ b/.lando.yml
@@ -21,9 +21,10 @@ services:
 #  memcache:
 #    type: memcached
 #  solr:
-#    type: solr:8.4
+#    type: solr:8.6
+#    core: drupal-solr
 #    config:
-#      dir: docroot/modules/contrib/search_api_solr/solr-conf/7.x
+#      dir: .platform/solr_8.x_config
 tooling:
   phpcs:
     service: appserver
