Upstream to get all latest changes from the platformsh-templates/drupal9 #24

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -14,11 +14,12 @@ dependencies:
         composer/composer: '^2'
 
 runtime:
+    # Enable the redis extension so Drupal can communicate with the Redis cache.
     extensions:
         - redis
-        - imagick
-        - apcu
         - sodium
+        - apcu
+        - blackfire
 
 # The relationships of the application with services or other applications.
 #
@@ -28,14 +29,14 @@ runtime:
 relationships:
     database: 'db:mysql'
     redis: 'cache:redis'
-#    solrsearch: 'searchsolr:solr'
+
 # The size of the persistent disk of the application (in MB).
 disk: 2048
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
 mounts:
     # The default Drupal files directory.
-    '/docroot/sites/default/files':
+    '/web/sites/default/files':
         source: local
         source_path: 'files'
     # Drupal gets its own dedicated tmp directory. The settings.platformsh.php
@@ -65,7 +66,6 @@ mounts:
 
 # Configuration of the build of this application.
 build:
-    # Automatically run `composer install` on every build.
     flavor: composer
 
 # The hooks executed at various points in the lifecycle of the application.
@@ -81,10 +81,11 @@ hooks:
     deploy: |
         set -e
         php ./drush/platformsh_generate_drush_yml.php
-        cd docroot
-        drush -y cache-rebuild
-        drush -y updatedb
-        drush -y config-import
+        # if drupal is installed, will call the following drush commands:
+        #   - `cache-rebuild`
+        #   - `updatedb`
+        #   - and if config files are present, `config-import`
+        ./drush/platformsh_deploy_drupal.sh
 
 # The configuration of app when it is exposed to the web.
 web:
@@ -146,4 +147,11 @@ crons:
     # Run Drupal's cron tasks every 19 minutes.
     drupal:
         spec: '*/19 * * * *'
-        cmd: 'cd docroot ; drush core-cron'
+        cmd: 'cd web ; drush core-cron'
+
+source:
+  operations:
+    auto-update:
+      command: |
+        curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
+
