--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for your interest in helping improve the Platform.sh templates!
+        Thanks for your interest in helping improve the Platformsh Varbase template!
         Please fill in the fields below so we can understand what's going wrong.
 
   - type: textarea
@@ -49,7 +49,7 @@ body:
   - type: textarea
     attributes:
       label: Your environment
-      description: Give us as many details as you can about your environment, whether that's on Platform.sh (your configuration YAMLs), or locally (your OS, services, and local development tool).
+      description: Give us as many details as you can about your environment, whether that's on Platformsh Varbase (your configuration YAMLs), or locally (your OS, services, and local development tool).
       placeholder: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eleifend diam non condimentum tincidunt. Vestibulum convallis eget ante dapibus eleifend.
     validations:
       required: true
