--- a/.github/ISSUE_TEMPLATE/config.yaml
+++ b/.github/ISSUE_TEMPLATE/config.yaml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Community Support
-    url: https://community.platform.sh/
+    url: https://www.drupal.org/project/issues/varbase
     about: Please ask and answer questions here.
-  - name: Join us on Slack
-    url: https://chat.platform.sh/
-    about: Ping the `@devrel_team`!
+  - name: Join Our Slack Team for Feedback and Support
+    url: http://slack.varbase.vardot.com/
+    about: Ping the Varbase `#development`!
