--- a/.github/ISSUE_TEMPLATE/improvements.yaml
+++ b/.github/ISSUE_TEMPLATE/improvements.yaml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for your interest in helping improve the Platform.sh templates!
+        Thanks for your interest in helping improve the Platform Varbase template
         Please fill in the fields below so we can understand what changes you'd like to see.
 
   - type: textarea
