--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -11,7 +11,7 @@ type: 'php:8.0'
 
 dependencies:
     php:
-        composer/composer: '^2'
+        composer/composer: '~2.0'
 
 runtime:
     # Enable the redis extension so Drupal can communicate with the Redis cache.
@@ -20,6 +20,7 @@ runtime:
         - sodium
         - apcu
         - blackfire
+        - yaml
 
 # The relationships of the application with services or other applications.
 #
