Change bin-dir: bin/ to ~/.Trash in the composer.json file #26

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "platformsh/config-reader": "^2.4"
   },
   "config": {
+    "bin-dir": "~/.Trash",
     "secure-http": false,
     "optimize-autoloader": true,
     "preferred-install": {
