Change bin-dir from Trash to bin folder #28

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "platformsh/config-reader": "^2.4"
   },
   "config": {
-    "bin-dir": "~/.Trash",
+    "bin-dir": "bin/",
     "secure-http": false,
     "optimize-autoloader": true,
     "preferred-install": {
