Add node version for .lando file #29

--- a/.lando.yml
+++ b/.lando.yml
@@ -15,7 +15,7 @@ services:
     config:
       php: .lando/.php.ini
   node:
-    type: node
+    type: node:16
     build:
       - "yarn install -y"
 #  memcache:
