--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,9 @@
   "conflict": {
     "drupal/drupal": "*"
   },
+  "replace": {
+    "drupal/hal": "*"
+  },
   "extra": {
     "branch-alias": {
       "dev-9.0.x": "9.0.x-dev",
